crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@348.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange() * nummultirange(numrange(1,2));"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..51
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Ascii42@23..24 "*"
      Whitespace@24..25 " "
      FuncCall@25..51
        Ident@25..38 "nummultirange"
        Ascii40@38..39 "("
        FuncCall@39..51
          Ident@39..47 "numrange"
          Ascii40@47..48 "("
          AConst@48..49
            Iconst@48..49 "1"
          Ascii44@49..50 ","
          AConst@50..51
            Iconst@50..51 "2"
  Ascii41@51..52 ")"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

