crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@349.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,2)) * nummultirange();"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..51
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Ascii42@36..37 "*"
      Whitespace@37..38 " "
      FuncCall@38..51
        Ident@38..51 "nummultirange"
  Ascii40@51..52 "("
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

