crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@353.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,3)}'::nummultirange * '{[2,5)}'::nummultirange;"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..58
    AExpr@7..58
      TypeCast@7..31
        AConst@7..16
          Sconst@7..16 "'{[1,3)}'"
        Typecast@16..18 "::"
        TypeName@18..31
          Ident@18..31 "nummultirange"
      Whitespace@31..32 " "
      Ascii42@32..33 "*"
      Whitespace@33..34 " "
      TypeCast@34..58
        AConst@34..43
          Sconst@34..43 "'{[2,5)}'"
        Typecast@43..45 "::"
        TypeName@45..58
          Ident@45..58 "nummultirange"
  Ascii59@58..59 ";"

